[package]
name = "blog_os_study"
version = "0.1.0"
authors = ["futugyousuzu <17871902+futugyu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# panic = "abort"
[profile.release]
# panic = "abort"

[dependencies]
bootloader = "0.9"
volatile = "0.3"
spin = "0.7"

[dependencies.lazy_static]
version = "1"
features = ["spin_no_std"]