[package]
name = "blog_os_study"
version = "0.1.0"
authors = ["futugyousuzu <17871902+futugyu@users.noreply.github.com>"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.dev]
# panic = "abort"
#[profile.release]
# panic = "abort"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
volatile = "0.3"
spin = "0.7"
x86_64 = "0.13"
uart_16550 = "0.2"
pic8259_simple = "0.2"
pc-keyboard = "0.5"
linked_list_allocator = "0.8"



[dependencies.lazy_static]
version = "1"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3"
default-features = false

[package.metadata.bootimage]
run-args = ["-L","E:\\qemu"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04","-serial","stdio","-display","none","-L","E:\\qemu"]
test-success-exit-code = 33